# swe573-practice

./: DEPLOYMENT_GUIDE.md  DOCKER_QUICKSTART.md  HTTPS_SETUP.md  LICENSE  PROJECT_INSTRUCTIONS.md  README.md
the_hive/: .env.example  .gitignore  AUTH_IMPLEMENTATION.md  AUTH_TESTING_GUIDE.md  BCRYPT_FIX.md  CHECKLIST.md  DATABASE.md  DATABASE_MODELS.md  DOCKER_GUIDE.md  MODERATION_IMPLEMENTATION.md  MODERATOR_DASHBOARD_IMPROVEMENTS.md  Makefile  OFFERS_NEEDS_IMPLEMENTATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TIMEZONE_IMPLEMENTATION.md  TIME_SLOTS_FEATURE.md  TIME_STORAGE_BEST_PRACTICES.md  USER_API_GUIDE.md  check_simplified_config.py  pyproject.toml  rebuild_docker.sh  run_tests.sh  start.sh  test_user_api.sh
the_hive/app/: __init__.py  main.py
the_hive/frontend/: .dockerignore  .env.example  .gitignore  AUTH_PAGES_COMPLETE.md  DEVELOPMENT.md  Dockerfile  NAVBAR_ENHANCEMENT.md  README.md  STRUCTURE.md  index.html  nginx.conf  package-lock.json  package.json  setup.sh  tsconfig.build.json  tsconfig.json  vite.config.ts
the_hive/infra/: .env.production  Dockerfile  deploy.sh  docker-compose.prod.yml  docker-compose.yml  nginx.prod.conf
the_hive/scripts/: demo_timezone_slots.py  example_time_slots.py  init_db.py  init_db_old.py  migrate_add_slots_to_needs.py  migrate_add_timezone_to_users.py  sanity_check_auth.py  sanity_check_offers_needs.py  seed_semantic_tags.py  test_auth_quick.sh  verify_auth_code.py
the_hive/tests/: __init__.py  test_auth.py  test_comments.py  test_debug.py  test_forum.py  test_golden_path_need.py  test_handshake.py  test_map.py  (+14 more)
(+140 files in other folders)
